--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ button > img {
 
 #reset {
     border: 0.2rem solid black;
+    background-color: white;
     padding: 1.5rem 2.5rem;
     font-size: 2rem;
     font-family: Roboto, sans-serif;
